--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calcular Area de Rectángulo.</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="index.js" defer></script>
 </head>
 <body>
-    
+    <div class="container mt-5">
+        <h2 class="text-center">Calculadora del Área del Rectángulo</h2>
+        <form id="areaForm">
+          <div class="mb-3">
+            <label for="longitud" class="form-label">Longitud</label>
+            <input type="number" class="form-control" id="longitud" placeholder="Ingrese la longitud" required>
+            <div class="invalid-feedback">Error, ingrese un valor válido.</div>
+          </div>
+          <div class="mb-3">
+            <label for="ancho" class="form-label">Ancho</label>
+            <input type="number" class="form-control" id="ancho" placeholder="Ingrese el ancho" required>
+            <div class="invalid-feedback">Error, ingrese un valor válido.</div>
+          </div>
+          <div class="mb-3">
+            <button type="button" class="btn btn-primary" onclick="calcularArea()">Calcular Área</button>
+            <button type="button" class="btn btn-secondary" onclick="limpiarCampos()">Limpiar Campos</button>
+          </div>
+          <div id="resultado" class="alert alert-info d-none"></div>
+        </form>
+      </div>
 </body>
 </html>
