--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <button type="button" class="btn btn-primary" onclick="calcularArea()">Calcular Área</button>
             <button type="button" class="btn btn-secondary" onclick="limpiarCampos()">Limpiar Campos</button>
           </div>
-          <div id="resultado" class="alert alert-info d-none"></div>
+          <div id="res" class="alert alert-info d-none"></div>
         </form>
       </div>
 </body>
